--- a/k8s/operator/values.yaml
+++ b/k8s/operator/values.yaml
@@ -91,23 +91,25 @@ sdp:
       pullSecrets: []
       pullPolicy: Always
 
-  externalSecret: false
-  externalSecretType: ""
-  externalSecretSource:
-    vault:
-      address: ""
-      inCluster: false
-      tokenSecret: ""
+  externalSecret:
+    enabled: false
+    type: ""
+    source:
+      vault:
+        address: ""
+        inCluster: false
+        tokenSecret: ""
 
-  externalFile: false
-  externalFileType: ""
-  externalFileSource:
-    http:
-      address: ""
-    s3:
-      address: ""
-      keySecret: ""
-      sslNoVerify: false
+  externalFile:
+    enabled: false
+    type: ""
+    source:
+      http:
+        address: ""
+      s3:
+        address: ""
+        keySecret: ""
+        sslNoVerify: false
 
 ## @param serviceAccount.create Enable the creation of a ServiceAccount for SDP pods
 serviceAccount:
