Remove getting the id from appgate_metadata

--- a/tests/resources/test_entity.yaml
+++ b/tests/resources/test_entity.yaml
@@ -479,6 +479,8 @@ definitions:
       fieldTwo:
         readOnly: true
         type: string
+      fieldThree:
+        type: string
   EntityTestFile:
     type: object
     properties:
