--- a/k8s/operator/templates/rbac.yaml
+++ b/k8s/operator/templates/rbac.yaml
@@ -88,8 +88,8 @@ rules:
       - serviceusers
     verbs: ["get", "watch", "list"]
   - apiGroups: [""]
-    resources: ["configmaps", "secrets"]
-    verbs: ["get", "watch", "list", "update", "patch"]
+    resources: ["configmaps"]
+    verbs: ["get", "create", "list", "patch"]
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
