--- a/.github/workflows/release-chart.yml
+++ b/.github/workflows/release-chart.yml
@@ -1,11 +1,14 @@
 name: Release Chart
 
 on:
-  push:
-    branches:
-      - main
+  workflow_run:
+    workflow: [ "Build and Push Image" ]
+    branches: [ "main" ]
+    types:
+      - completed
 
 jobs:
+  if: ${{ github.event.workflow_run.conclusion == 'success' && github.ref == 'refs/heads/main' }}
   release:
     permissions:
       contents: write
