--- a/.github/workflows/release-chart.yml
+++ b/.github/workflows/release-chart.yml
@@ -14,10 +14,7 @@ jobs:
       contents: write
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-        with:
-          fetch-depth: 0
+      - uses: actions/checkout@v3
 
       - name: Configure Git
         run: |
@@ -29,5 +26,6 @@ jobs:
 
       - name: Run chart-releaser
         uses: helm/chart-releaser-action@v1.5.0
+        config: .chart-releaser/config.yaml
         env:
           CR_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
