Fix another syntax error

--- a/.github/workflows/release-chart-oci.yml
+++ b/.github/workflows/release-chart-oci.yml
@@ -2,7 +2,7 @@ name: Release Chart OCI
 
 on:
   workflow_run:
-    workflow: [ "Build and Push Image" ]
+    workflows: [ "Build and Push Image" ]
     branches: [ "main" ]
     types:
       - completed
