--- a/.github/workflows/build-push-image.yml
+++ b/.github/workflows/build-push-image.yml
@@ -2,7 +2,7 @@ name: Build and Push Image
 
 on:
   workflow_run:
-    workflow: [ "Build" ]
+    workflows: [ "Build" ]
     branches: [ "main" ]
     types:
       - completed
