Fix syntax for chart-releaser argument

--- a/.github/workflows/release-chart.yml
+++ b/.github/workflows/release-chart.yml
@@ -26,6 +26,8 @@ jobs:
 
       - name: Run chart-releaser
         uses: helm/chart-releaser-action@v1.5.0
-        config: .chart-releaser/config.yaml
+        with:
+          charts_dir: k8s
+          config: .chart-releaser/config.yaml
         env:
           CR_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
