Fix GitHub action

--- a/.github/workflows/build-push-image.yml
+++ b/.github/workflows/build-push-image.yml
@@ -13,6 +13,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - name: Get openspec API
+        run: ./bin/get-open-spec.sh
+        shell: bash
+      - uses: actions/upload-artifact@v2
+        with:
+          name: openspecs
+          path: /tmp/openspec-*.zip
       - uses: actions/download-artifact@v2
         with:
           name: openspecs
