--- a/k8s/operator/Chart.yaml
+++ b/k8s/operator/Chart.yaml
@@ -1,8 +1,6 @@
 apiVersion: v2
 name: sdp-operator
-description: |
-  A Helm chart for deploying the Appgate SDP operator
-  For more information, please read the documentation here: https://github.com/appgate/sdp-operator/README.org
+description: Helm chart for the Appgate SDP Operator
 
 # A chart can be either an 'application' or a 'library' chart.
 #
