Add test to test a new dumper (git)
This new dumper will dump special readOnly fields.
The idea is that the reverse operator will propagate this into k8s and
we could use that information to compare against the values sent by
controller there.

--- a/tests/resources/test_entity.yaml
+++ b/tests/resources/test_entity.yaml
@@ -26,6 +26,8 @@ paths:
     $ref: '#/entity-test-with-id'
   /entity-test-file:
     $ref: '#/entity-test-file'
+  /entity-test-file-complex:
+    $ref: '#/entity-test-file-complex'
   /entity-dep-1:
     $ref: '#/entity-dep-1'
   /entity-dep-2:
@@ -183,6 +185,21 @@ entity-test-file:
         application/json:
           schema:
             $ref: '#/definitions/EntityTestFile'
+
+entity-test-file-complex:
+  get:
+    responses:
+      '200':
+        content:
+          application/json:
+            schema:
+              $ref: '#/definitions/EntityTestList'
+  post:
+    requestBody:
+      content:
+        application/json:
+          schema:
+            $ref: '#/definitions/EntityTestFileComplex'
 
 entity-dep-1:
   get:
@@ -491,6 +508,20 @@ definitions:
       file:
         type: string
         format: byte
+  EntityTestFileComplex:
+    type: object
+    properties:
+      filename:
+        type: string
+      file:
+        writeOnly: true
+        type: string
+        format: byte
+      checksum:
+        format: checksum
+        readOnly: true
+        type: string
+        x-checksum-source: file
   EntityDep1:
     type: object
     properties:
