Fix tests to use the new url for bytes source

--- a/tests/resources/test_entity.yaml
+++ b/tests/resources/test_entity.yaml
@@ -443,6 +443,7 @@ definitions:
         writeOnly: true
         format: byte
         type: string
+        x-checksum: fieldTwo
       fieldTwo:
         readOnly: true
         type: string
