Add x-checksum field to entities for tests

--- a/tests/resources/test_entity.yaml
+++ b/tests/resources/test_entity.yaml
@@ -518,6 +518,7 @@ definitions:
         writeOnly: true
         type: string
         format: byte
+        x-checksum: checksum
       checksum:
         format: checksum
         readOnly: true
