--- a/tests/resources/test_entity.yaml
+++ b/tests/resources/test_entity.yaml
@@ -466,6 +466,7 @@ definitions:
         writeOnly: true
         format: byte
         type: string
+        x-checksum: fieldTwo
       fieldTwo:
         readOnly: true
         type: string
