--- a/tests/resources/crd/v16/appliance.yaml
+++ b/tests/resources/crd/v16/appliance.yaml
@@ -569,8 +569,10 @@ spec:
                         default: ''
                         type: string
                       backgroundImage:
+                        default: ''
                         type: string
                       logo:
+                        default: ''
                         type: string
                       text:
                         default: ''
