--- a/tests/resources/crd/v17/appliance.yaml
+++ b/tests/resources/crd/v17/appliance.yaml
@@ -550,8 +550,10 @@ spec:
                         default: ''
                         type: string
                       backgroundImage:
+                        default: ''
                         type: string
                       logo:
+                        default: ''
                         type: string
                       text:
                         default: ''
