--- a/tests/resources/crd/v18/appliance.yaml
+++ b/tests/resources/crd/v18/appliance.yaml
@@ -574,8 +574,10 @@ spec:
                         default: ''
                         type: string
                       backgroundImage:
+                        default: ''
                         type: string
                       logo:
+                        default: ''
                         type: string
                       text:
                         default: ''
