Add support for several field targets

--- a/tests/resources/test_entity.yaml
+++ b/tests/resources/test_entity.yaml
@@ -519,6 +519,7 @@ definitions:
         writeOnly: true
         type: string
         format: byte
+        x-filename: filename
         x-checksum: checksum
       checksum:
         format: checksum
