Test that name can be used to fetch bytes as well

--- a/tests/resources/test_entity.yaml
+++ b/tests/resources/test_entity.yaml
@@ -513,6 +513,11 @@ definitions:
   EntityTestFileComplex:
     type: object
     properties:
+      id:
+        type: string
+        format: uuid
+      name:
+        type: string
       filename:
         type: string
       file:
