--- a/.github/workflows/release-chart.yml
+++ b/.github/workflows/release-chart.yml
@@ -28,6 +28,8 @@ jobs:
 
       - name: Run chart-releaser
         uses: helm/chart-releaser-action@v1.5.0
+        with:
+          charts_dir: "k8s"
         env:
           CR_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
           CR_OWNER: "appgate"
